# piscine_python

./: .gitignore  List-comprehension_generator-expression.md  Python_scripts_programs.md  README.md  img_array.md  main_fct.md  sys_stdin_read.md
0_starting/: Hello.py
0_starting/ex00/: Hello.py
0_starting/ex01/: format_ft_time.py
0_starting/ex02/: find_ft_type.py
0_starting/ex03/: NULL_not_found.py
0_starting/ex04/: whatis.py
0_starting/ex05/: building.py
0_starting/ex06/: filterstring.py  ft_filter.py
0_starting/ex07/: sos.py
0_starting/ex08/: Loading.py  tester.py
0_starting/ex09/: README.md  pyproject.toml  test.py
0_starting/ex09/src/: __init__.py  ft_filter.py
0_starting/ex09/src/ft_filter_acloos.egg-info/: PKG-INFO  SOURCES.txt
0_starting/ex09/src/ft_filtering_acloos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
1_array/ex00/: give_bmi.py
1_array/ex01/: array2D.py  tester.py
1_array/ex02/: load_image.py  tester.py
1_array/ex03/: load_image.py  zoom copy.py  zoom.py
1_array/ex04/: rotate.py
1_array/ex05/: load_image.py  pimp_image.py  tester.py
2_DataTable/ex02/: aff_pop.py
2_DataTable/ex03/: load_csv.py
2_DataTable/exo00/: load_csv.py  tester.py
2_DataTable/exo01/: aff_life.py
2_DataTable/exo02/: aff_pop.py
2_DataTable/exo03/: projection_life.py
3_OOP/ex00/: S1E9.py  tester.py
3_OOP/ex01/: S1E7.py  S1E9.py  tester.py
3_OOP/ex02/: DiamondTrap.py  DiamondTrapOK.py  S1E7.py  S1E9.py  tester.py
3_OOP/ex03/: ft_calculator.py  tester.py
3_OOP/ex04/: ft_calculator.py
scraper/: pah  scraper.py
(+5 files in other folders)
